--- a/readme
+++ b/readme
@@ -1,3 +1,2 @@
-**This is the parking app project GitHub page.**
-This project 
-God day
+#This is the parking app project GitHub page.
+##This project is a school project for the group project course at ÅA University
